syntax = "proto3";

option csharp_namespace = "Genova.ContentService.Protos";

package genova.content;

// Content retrieval service
service Content {
    // Health check method
    rpc Ping (PingRequest) returns (PingResponse);

    // Fetches content for a given culture and URL path
    rpc FetchContent (ContentRequest) returns (ContentResponse);
}

message PingRequest {}

message PingResponse {
    string message = 1;
}

// Request containing culture and URL path
message ContentRequest {
    string culture = 1;
    string urlPath = 2;
}

// Response containing the JSON content
message ContentResponse {
    string content = 1;
}
